# CMakeLists-Sample

app/include/AModule/: AClass.h
app/src/: CMakeLists.txt  main.cpp
app/src/AMudule/: AClass.cpp
